# proxytool

./: README.md  pyproject.toml
proxysql_cfgcheck/: cli.py  config_loader.py  config_model.py  config_parser.py
proxysql_cfgcheck/rules/: base.py  builtin.py
tests/: test_cli.py  test_parser.py  test_rules.py
tests/data/: minimal.cnf
