[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxytool"
version = "0.1.0"
description = "Static configuration checker for ProxySQL"
requires-python = ">=3.9"
readme = "README.md"
keywords = ["proxysql", "config", "validation"]
dependencies = []

[project.scripts]
proxytool = "proxysql_cfgcheck.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["proxysql_cfgcheck*"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
